# tompa

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  tompa
.github/workflows/: ci.yml
.reports/: codemap-diff.txt
backend/: .dockerignore  Cargo.toml
backend/.sqlx/: query-09e6cadaa5f01ee34039768d3905f7baa7669d49b44710237988412a757dcb71.json  query-16a66b8509783472311cd5d6ad8c8043e6456413eaeaf6eb6e033e2c879e30bb.json  query-24f82b6b7590f5732d972e7a2a8786ca90a0ee62296e4eafdc4600e857ae9d1d.json  query-41ee31f6182ac80a49512f33198a5f08ac6110fbd060588564d7ad6d2a020560.json  query-9d4ec9dd8e0813dac7d86de6171cb4be83c9eda0da4d7e67f15962cc84555539.json  query-da30f684c346852379156650922c6771939ac71cbe824ee91aae312c385d1730.json
backend/agent/: Cargo.toml  Dockerfile  config.toml.example
backend/agent/setup-ui/: index.html  package.json  vite.config.ts
backend/agent/setup-ui/src/: App.css  App.tsx  index.css
backend/agent/src/: agent_status.rs  claude_code.rs  config.rs  dispatcher.rs  git_manager.rs  main.rs  setup_ui.rs  ws_client.rs
backend/agent/src/prompts/: convergence.rs  description_refinement.rs  implementation.rs  mod.rs  planning.rs  task_decomposition.rs  task_qa.rs
backend/agent/src/prompts/grooming/: development.rs  marketing.rs  mod.rs
backend/server/: CONTRIBUTING.md  Cargo.toml  Dockerfile
backend/server/migrations/: 001_create_extensions.sql  002_create_organizations.sql  003_create_users.sql  004_create_org_members.sql  005_create_projects.sql  006_create_stories.sql  007_create_tasks.sql  008_create_task_dependencies.sql  009_create_qa_rounds.sql  010_create_container_api_keys.sql  011_create_knowledge_entries.sql  012_enable_rls.sql  013_force_rls.sql  014_unique_project_name_per_org.sql  015_add_pending_refined_description.sql  016_agent_sessions.sql  017_agent_session_round_link.sql  018_project_grooming_roles.sql  019_project_qa_config.sql  020_create_decision_patterns.sql  021_create_project_profiles.sql
backend/server/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  openapi.rs  state.rs
backend/server/src/agents/: handler.rs  mod.rs  registry.rs  service.rs  session_repo.rs
backend/server/src/agents/prompts/: description_refinement.rs  detail_levels.rs  implementation.rs  mod.rs  models.rs  planning.rs  task_decomposition.rs  task_qa.rs
backend/server/src/agents/prompts/grooming/: business.rs  design.rs  mod.rs  security.rs
backend/server/src/agents/prompts/roles/: decomposition.toml  description_refinement.toml  detail_levels.toml  grooming.toml  implementation.toml  planning.toml  task_qa.toml
backend/server/src/auth/: handler.rs  middleware.rs  mod.rs  service.rs  types.rs
backend/server/src/container_keys/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/decision_patterns/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/knowledge/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/orgs/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/project/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/project_profiles/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/qa/: handler.rs  repo.rs  service.rs  types.rs
backend/server/src/sse/: broadcaster.rs  handler.rs  mod.rs
backend/server/src/story/: handler.rs  mod.rs  rank.rs  repo.rs  service.rs  types.rs
backend/server/src/task/: handler.rs  mod.rs  repo.rs  service.rs  types.rs
backend/server/tests/: agents.rs  container_keys.rs  knowledge.rs  orgs_projects.rs  qa_rounds.rs  stories.rs  tasks.rs
backend/server/tests/common/: mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: enums.rs  lib.rs  messages.rs  telemetry.rs  tests.rs  types.rs
codemaps/: architecture.md  backend.md  data.md  frontend.md
doc/: agent-test-stories.md  atomic_design.md  plan.md  smart-agent.md  spec.md  tech.md  ui-tasks.md
frontend/: orval.config.json  orval.config.ts  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  vite.config.ts
frontend/e2e/: auth.spec.ts  global-setup.ts  helpers.ts  projects.spec.ts  stories.spec.ts  story-creation.spec.ts  story-modal.spec.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: custom-fetch.ts  openapi.json
frontend/src/components/ui/: accordion.tsx  ai-status-indicator.tsx  alert.tsx  answer-option-card.test.tsx  answer-option-card.tsx  app-breadcrumb.tsx  attention-dot.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  (+38 more)
frontend/src/hooks/: use-auth.ts  use-exit-animation.ts  use-sse.ts
frontend/src/lib/: fractional-indexing.ts
frontend/src/stores/: sse-store.ts  toast-store.ts  ui-store.ts
helm/: Chart.yaml  argocd-app.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  external-secret.yaml  ingress.yaml  service.yaml
scripts/: check-api-contract.sh
scripts/eval/: package.json  run.ts
scripts/eval/fixtures/: stories.json
(+33 files in other folders)
