[workspace]
members = ["server", "agent", "shared"]
resolver = "2"

[workspace.dependencies]
# Internal crates
shared = { path = "shared" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Web
axum = { version = "0.8", features = ["ws", "json"] }
tower = { version = "0.5", features = ["util"] }
futures-util = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.13", features = ["json", "form"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
dashmap = "6"

# Auth
jsonwebtoken = "10"
bcrypt = "0.18"
rand = "0.10"
base64 = "0.22"

# API docs
utoipa = { version = "5", features = ["uuid", "chrono"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "1"

# Git
gix = { version = "0.80", default-features = false, features = ["revision"] }

# Embed
rust-embed = "8"

# Test
tempfile = "3"
ctor = "0.6"
