[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
gix = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
ctor = { workspace = true }
