[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
utoipa = { version = "4", features = ["uuid", "chrono"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
dashmap = "6"
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
