[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
ctor = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
